force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <displayFormat>TN-{0000000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>