force-app/main/default/objects/Target__c/fields/Active_CP__c.field-meta.xml
<CustomField>
    <fullName>Active_CP__c</fullName>
    <label>Active CP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>