force-app/main/default/objects/Target__c/fields/AOP_targets_Vertical__c.field-meta.xml
<CustomField>
    <fullName>AOP_targets_Vertical__c</fullName>
    <label>AOP targets Vertical</label>
    <length>250</length>
    <type>Text</type>
</CustomField>