force-app/main/default/objects/Target__c/fields/Calling_Target__c.field-meta.xml
<CustomField>
    <fullName>Calling_Target__c</fullName>
    <label>Call attempts Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>