force-app/main/default/objects/Target__c/fields/Closing_revenue_target__c.field-meta.xml
<CustomField>
    <fullName>Closing_revenue_target__c</fullName>
    <label>Closing revenue target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>