force-app/main/default/objects/Target__c/fields/Collection_Target__c.field-meta.xml
<CustomField>
    <fullName>Collection_Target__c</fullName>
    <label>Collection Target</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>