force-app/main/default/objects/Target__c/fields/Connect_call_target__c.field-meta.xml
<CustomField>
    <fullName>Connect_call_target__c</fullName>
    <label>Connect call target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>