force-app/main/default/objects/Target__c/fields/CP_meetings__c.field-meta.xml
<CustomField>
    <fullName>CP_meetings__c</fullName>
    <description>CP meetings doen by Sourcing SM</description>
    <inlineHelpText>CP meetings doen by Sourcing SM</inlineHelpText>
    <label>CP meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>