force-app/main/default/objects/Target__c/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <label>Target Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>