force-app/main/default/objects/Target__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>