force-app/main/default/objects/Target__c/fields/Number_of_CP_empaneled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CP_empaneled__c</fullName>
    <label>Number of CP empaneled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>