force-app/main/default/objects/Target__c/fields/Posession_Target__c.field-meta.xml
<CustomField>
    <fullName>Posession_Target__c</fullName>
    <label>Posession Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>