force-app/main/default/objects/Target__c/fields/Qualified_Lead_to_Walkin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Lead_to_Walkin_Percent__c</fullName>
    <label>Qualified Lead to Walkin Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>