force-app/main/default/objects/Target__c/fields/Revisit_Target__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Target__c</fullName>
    <label>Revisit Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>