force-app/main/default/objects/Target__c/fields/Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Amount__c</fullName>
    <label>Target Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>