force-app/main/default/objects/Target__c/fields/Signed_monthly_targets__c.field-meta.xml
<CustomField>
    <fullName>Signed_monthly_targets__c</fullName>
    <label>Signed monthly targets</label>
    <length>250</length>
    <type>Text</type>
</CustomField>