force-app/main/default/objects/Target__c/fields/Signed_monthly_targets_vertical__c.field-meta.xml
<CustomField>
    <fullName>Signed_monthly_targets_vertical__c</fullName>
    <label>Signed monthly targets - vertical</label>
    <length>250</length>
    <type>Text</type>
</CustomField>