force-app/main/default/objects/Target__c/fields/Sourcing_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Revenue_Target__c</fullName>
    <label>Sourcing  Revenue Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>