force-app/main/default/objects/Target__c/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <label>Target Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>