force-app/main/default/objects/Target__c/fields/Unique_outbound_meeting__c.field-meta.xml
<CustomField>
    <fullName>Unique_outbound_meeting__c</fullName>
    <label>Unique outbound meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>