force-app/main/default/objects/Target__c/fields/Vertical_Target__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Target__c</fullName>
    <label>Vertical Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>NRI/OS</fullName>
            </value>
            <value>
                <fullName>Referral/Loyalty</fullName>
            </value>
            <value>
                <fullName>Pre-sales/Direct</fullName>
            </value>
            <value>
                <fullName>Corporate/ ACP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>