force-app/main/default/objects/Target__c/fields/Walkin_Target__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Target__c</fullName>
    <label>Walkin Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>