force-app/main/default/objects/Target__c/recordTypes/Home_Loan_Targets.recordType-meta.xml
<RecordType>
    <fullName>Home_Loan_Targets</fullName>
    <active>true</active>
    <label>Home Loan Targets</label>
</RecordType>