force-app/main/default/objects/Target__c/recordTypes/Loyalty_Referral_Sourcing_SM.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Referral_Sourcing_SM</fullName>
    <active>true</active>
    <label>Loyalty/Referral Sourcing SM</label>
</RecordType>