force-app/main/default/objects/Target__c/recordTypes/NRI_OS_Sourcing_SM.recordType-meta.xml
<RecordType>
    <fullName>NRI_OS_Sourcing_SM</fullName>
    <active>true</active>
    <label>NRI/OS Sourcing SM</label>
</RecordType>