force-app/main/default/objects/Target__c/recordTypes/Pre_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sales_Target</fullName>
    <active>true</active>
    <label>Pre-Sales Target</label>
</RecordType>