force-app/main/default/objects/Target__c/recordTypes/RM_Target.recordType-meta.xml
<RecordType>
    <fullName>RM_Target</fullName>
    <active>true</active>
    <label>RM Target</label>
</RecordType>