force-app/main/default/objects/Target__c/recordTypes/Sourcing_Target.recordType-meta.xml
<RecordType>
    <fullName>Sourcing_Target</fullName>
    <active>true</active>
    <label>CP Sourcing SM Target</label>
</RecordType>