force-app/main/default/objects/Target__c/recordTypes/Vertical_Target.recordType-meta.xml
<RecordType>
    <fullName>Vertical_Target</fullName>
    <active>true</active>
    <label>Vertical Target</label>
</RecordType>