force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Target_Month__c</columns>
    <columns>Target_Year__c</columns>
    <columns>Calling_Target__c</columns>
    <columns>Walkin_Target__c</columns>
    <columns>Closing_revenue_target__c</columns>
    <columns>Sourcing_Revenue_Target__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>