force-app/main/default/objects/Target__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>startsWith</operation>
        <value>Runwal City Center</value>
    </filters>
    <label>All</label>
</ListView>