force-app/main/default/objects/Target__c/listViews/Runwal_Forests.listView-meta.xml
<ListView>
    <fullName>Runwal_Forests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email__c</columns>
    <columns>Target_Month__c</columns>
    <columns>Target_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Runwal Forests</label>
</ListView>